--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "repository": "https://github.com/YQBird/RetroGames.git",
   "author": "Qun Yan",
   "license": "MIT",
-  "script": {
-  	"api": "babel-node server.js"
+  "scripts": {
+    "api": "babel-node server.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.16.0",
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "mongoose": "^4.8.3",
     "morgan": "^1.8.1",
+    "q": "^1.4.1",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
@@ -20,5 +22,4 @@
     "babel-core": "^6.23.1",
     "babel-preset-es2015": "^6.22.0"
   }
-
 }
